test/Fail/Issue3274.err
Issue3274.agda:27.20-21: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue3274.agda:27.20-21
